# python-vibe-guard

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: bad_async.py
pyvibe/: __main__.py  analyzer.py  audit.py  autofix.py  baseline.py  cli.py  config.py  diff.py  explain.py  rule_docs.py  sarif.py  suppressions.py
pyvibe/rules/: async_requests.py  async_sleep.py  asyncio_run.py  base.py  celery_time_limit.py  contextvar_cleanup.py  create_task_orphan.py  ensure_future_orphan.py  gather_no_return_exceptions.py  httpx_client_sync.py  httpx_sync.py  loop_run_until_complete.py  open_async.py  os_blocking.py  queue_put_nowait.py  retry_no_backoff.py  silent_except.py  sqlite_async.py  subprocess_async.py  threading_lock.py  while_true_no_await.py
research/: candidate-public-findings.md  catalog.md  methodology.md  precision-audit.md  public-findings.md  top-hazards.md
research/accepted/: PYVIBE-001.md  PYVIBE-002.md  PYVIBE-003.md  PYVIBE-004.md  PYVIBE-005.md  PYVIBE-006.md  PYVIBE-007.md  PYVIBE-008.md  PYVIBE-009.md  PYVIBE-010.md  PYVIBE-011.md  PYVIBE-012.md  PYVIBE-013.md  PYVIBE-014.md  PYVIBE-015.md  PYVIBE-016.md  PYVIBE-017.md  PYVIBE-018.md  PYVIBE-019.md  PYVIBE-020.md
research/datasets/: 100-repos.json  1000-repos.json  (+3 more)
tests/: test_audit.py  test_baseline.py  test_config.py  test_diff.py  test_exclude.py  test_explain.py  test_rules.py  test_sarif.py  test_suppressions.py
validation/: aggregate.json  breakdown.json  gaps-found.md  local-projects.md  massive-results.md  results.md  run_massive_scan.py
(+2 files in other folders)
